fixing first slide alignment

--- a/custom.scss
+++ b/custom.scss
@@ -15,38 +15,6 @@
 // }
 
 
-// .reveal .slide > section:first-of-type h1 {
-//   max-width: 10%;
-//   color: #be1414;  /* Title color */
-// }
-
-// // /* Style the main title */
-// // .reveal .slide > section:first-of-type h1 {
-// //   text-align: right; /* Center the title */
-// //   // max-width: 60%;
-// //   color: #ffffff;  /* Title color */
-// // }
-
-// /* Style the subtitle */
-// .reveal .slide:first-of-type h2 {
-//   color: #e10dd3; /* Change subtitle color */
-//   text-align: right; /* Center the subtitle */
-// }
-
-// /* Style the author name */
-// .reveal .slide:first-of-type .author {
-//   color: #d2f106;
-//   text-align: right;
-//   margin-top: 20px;
-// }
-
-// /* Style the date */
-// .reveal .slide:first-of-type .date {
-//   color: #0de538;
-//   text-align: right;
-//   margin-top: 10px;
-// }
-
 
 
 /* Custom CSS for Reveal.js slides */
@@ -136,33 +104,70 @@
 }
 
 
-// .reveal .slide > section:first-of-type h1 {
-//   max-width: 10%;
-//   color: #be1414;  /* Title color */
-// }
+
 
 
 
 .reveal .title:first-of-type {
   text-align: right; /* Center the title */
-  max-width: 60%;
-  color: #0a0909;  /* Title color */
+  width: 80%;
+  color: #0f6e91;  /* Title color */
+  // position: absolute;
+  // right: 0px;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  font-size: 80px
 }
 
 .reveal .subtitle:first-of-type {
   text-align: right; /* Center the title */
-  max-width: 60%;
-  color: #4c0a0a;  /* Title color */
+  width: 80%;
+  color: #0f6e91;  /* Title color */
+  float: right;
+  display: flex;
+  flex-direction: column;
+  font-size: 55px;
 }
 
-.reveal .quarto-title-author:first-of-type {
-  text-align: right; /* Center the title */
-  max-width: 60%;
-  color: #3a14c6;  /* Title color */
+.reveal .quarto-title-authors {
+  width: 80%;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  padding-right: 0 !important;
 }
+
+.reveal .quarto-title-author {
+  text-align: right; /* Center the title */
+  // width: 80%;
+  color: #0f6e91;  /* Title color */
+  // float: right;
+  // display: flex;
+  // flex-direction: column;
+  padding-right: 0 !important
+}
+
+
 
 .reveal .date {
   text-align: right; /* Center the title */
-  max-width: 60%;
-  color: #10e71e;  /* Title color */
+  width: 80%;
+  color: #0f6e91;  /* Title color */
+  float: right;
+  display: flex;
+  flex-direction: column;
 }
+
+
+// .reveal .slide-background:first-of-type {
+//   background-color: #0f6e91; /* Background color (optional) */
+//   background-image: url('data/logo.png'); /* Path to your logo */
+//   background-size: 550px 550px; /* Adjust the size of the logo */
+//   // background-position: center left; /* Adjust logo position (top-right corner) */
+//   // background-position-x: 50px;
+//   background-position: center;
+//   background-position-y: 0px;
+
+//   background-repeat: no-repeat; /* Ensure the logo isn't repeated */
+// }
